data/pc/1.14/README.md
<details><summary>Collected (42)</summary>
<p>

| Packet |
| --- |
| login |
| custom_payload |
| difficulty |
| abilities |
| held_item_slot |
| declare_recipes |
| tags |
| entity_status |
| declare_commands |
| unlock_recipes |
| position |
| player_info |
| update_view_position |
| update_light |
| map_chunk |
| spawn_entity |
| entity_metadata |
| entity_velocity |
| spawn_entity_living |
| entity_update_attributes |
| world_border |
| update_time |
| spawn_position |
| window_items |
| set_slot |
| update_health |
| experience |
| keep_alive |
| entity_equipment |
| block_change |
| rel_entity_move |
| entity_teleport |
| advancements |
| world_event |
| entity_head_rotation |
| multi_block_change |
| entity_move_look |
| entity_look |
| animation |
| entity_destroy |
| sound_effect |
| set_passengers |

</p>
</details>
<details><summary>Missing (50)</summary>
<p>

| Packet |
| --- |
| spawn_entity_experience_orb |
| spawn_entity_weather |
| spawn_entity_painting |
| named_entity_spawn |
| statistics |
| block_break_animation |
| tile_entity_data |
| block_action |
| boss_bar |
| tab_complete |
| face_player |
| nbt_query_response |
| chat |
| transaction |
| close_window |
| open_window |
| craft_progress_bar |
| set_cooldown |
| named_sound_effect |
| kick_disconnect |
| explosion |
| unload_chunk |
| game_state_change |
| open_horse_window |
| world_particles |
| map |
| trade_list |
| entity |
| vehicle_move |
| open_book |
| open_sign_entity |
| craft_recipe_response |
| combat_event |
| remove_entity_effect |
| resource_pack_send |
| respawn |
| camera |
| update_view_distance |
| scoreboard_display_objective |
| attach_entity |
| scoreboard_objective |
| teams |
| scoreboard_score |
| title |
| entity_sound_effect |
| stop_sound |
| playerlist_header |
| collect |
| entity_effect |
| select_advancement_tab |

</p>
</details>